Updated Burp Suite installer scripts
Yes, a repo update is coming...